<resources>
    <string name="app_name">Alc1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="welcome_message">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">My profile</string>
    <string name="track_android">Track: Android</string>
    <string name="country_congo_drc">Country: Congo(DRC)</string>
    <string name="email">Email: Alainburindi62@gmail.com</string>
    <string name="phone">Phone Number : +243974690917</string>
    <string name="slack">Slack Username: @alain</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="about">ABOUT ALC</string>
</resources>
